Ignore Models folder.
Don’t want to add the models to the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # =============== #
 Temp/
 Library/
+Assets/Models/
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
