Add main menu, settings menu, in-game UI
The new game, settings and exit buttons on the main menu work.
The new game button currently just directs the player to Level1.

The settings menu currently has no effect.

The in-game UI works, but the player's health isn't linked to the
healthbar yet.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 Temp/
 Library/
 Assets/Models/
+Assets/UI/UI_Assets/
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
